@@ -36,15 +36,39 @@ Finally, you can choose a custom plugins directory if the default doesn't suit y
 `MB_PLUGINS_DIR`.
 
 
-### Enabling Plugins on Java 9
+### Adding Additional Dependencies with Java 9
 
-Java 9 disables dynamically adding JARs to the Java classpath by default for security reasons. For the time being, we recommend you
-run Metabase with Java 8 when using the SparkSQL driver.
-
-You may be able to get Java 9 to work by passing an extra JVM option:
+Java version 9 has introduced a new module system that places some additional restrictions on class loading. To use
+Metabase drivers that require extra external dependencies, you'll need to include them as part of the classpath at
+launch time. Run Metabase as follows:
 
 ```bash
-java --add-opens=java.base/java.net=ALL-UNNAMED -jar metabase.jar
+# Unix
+java -cp metabase.jar:plugins/* metabase.core
 ```
 
-The default Docker images already include this option.
+On Windows, use a semicolon instead:
+
+```powershell
+# Windows
+java -cp metabase.jar;plugins/* metabase.core
+```
+
+The default Docker images use Java 8 so this step is only needed when running the JAR directly.
+
+
+### Using SparkSQL with a Custom Metabase Build
+
+The SparkSQL dependencies JAR contains additional classes inside the `metabase` Java package, the same package
+the core  Metabase code lives in. When multiple JARs include classes in the same package, Java requires them to
+be signed with the same signing certificate. The official Metabase JAR and SparkSQL dependencies JAR are signed
+with the same certificate, so everything works as expected.
+
+If you build a custom Metabase JAR, however, Java will refuse to load the SparkSQL dependencies JAR provided
+above, because your JAR will not be signed with the same certificate (if you signed it at all). You will need to
+build the SparkSQL dependencies JAR yourself, and, if applicable, sign it with the same certificate you signed
+your custom Metabase JAR with.
+
+The SparkSQL dependencies project can be found at
+[https://github.com/metabase/sparksql-deps](https://github.com/metabase/sparksql-deps). Instructions for building
+the JAR are provided in the README.
